manifests/file_uploader/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharpfiles-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sharpfiles
  template:
    metadata:
      labels:
        app: sharpfiles
    spec:
      hostname: sharpfiles
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - vmi1555974.contaboserver.net
      containers:
      - name: sharpfiles
        image: sharp6292/sharpfiles
        # kubectl create secret generic sharex-secret --from-literal=SHAREXPASS=pass
        volumeMounts:
        - name: sharpfiles-data
          mountPath: /sharex/files/
      volumes:
      - name: sharpfiles-data
        persistentVolumeClaim:
          claimName: sharpfiles-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: sharpfiles-service
spec:
  selector:
    app: sharpfiles
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sharpfiles-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.tls.certresolver: "files-mcaq-me-tls"
spec:
  tls:
  - hosts:
      - files.mcaq.me
    secretName: files-mcaq-me-tls
  rules:
  - host: files.mcaq.me
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sharpfiles-service
              port:
                number: 8080
